# xBOUT

./: .coveragerc  .deepsource.toml  .gitignore  .pep8speaks.yml  .readthedocs.yml  .travis.yml  LICENSE  README.md  boutdataset.py  collect.py  concatenate.py  conftest.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py
.github/workflows/: black.yml  master.yml  pythonpackage.yml  pythonpublish.yml  ruff.yaml
boutmodules/: stormdataset.py
docs/: accessor_methods.rst  api.rst  cherab.rst  conf.py  extending_xbout.rst  index.rst  loading_data.rst  xbout.rst
examples/: animated_plot.py  luddite.py  parameter_scan.py  plot_grid.py  plot_profiles.py  redistribute_restarts.py  save_data.py  speed_comparison.py  speed_test.py
examples/boutmodules/: stormdataset.py
examples/boutmodules/tests/: test_stormdataset.py
examples/tutorial/: blob2d.ipynb
tests/: test_boutdataset.py  test_collect.py  test_combine_nd.py  test_stormdataset.py
xbout/: __init__.py  animate.py  bout_info.py  boutdataarray.py  boutdataset.py  collect.py  conftest.py  fastoutput.py  geometries.py  grid.py  lazyload.py  load.py  mfdataset.py  options.py  region.py  tracing.py  utils.py  wall.py  warning.py  xarraybackend.py
xbout/calc/: __init__.py  turbulence.py
xbout/calc/tests/: test_turbulence.py
xbout/cherab/: grid.py  triangulate.py
xbout/fci/: evaluate_at.py  gen_ds.py  test_evaluate_at.py  tracing.py
xbout/modules/: __init__.py
xbout/plotting/: animate.py  plotfuncs.py  utils.py
xbout/tests/: conftest.py  pytest.ini  test_against_collect.py  test_animate.py  test_boutdataarray.py  test_boutdataset.py  test_collect.py  test_fastoutput.py  test_geometries.py  test_grid.py  test_init.py  test_load.py  test_options.py  test_plot.py  test_region.py  test_utils.py  utils_for_tests.py
xbout/tests/data/dump_files/along_x/: BOUT.dmp.0.nc  BOUT.dmp.1.nc  BOUT.dmp.10.nc  BOUT.dmp.11.nc  BOUT.dmp.12.nc  BOUT.dmp.13.nc  BOUT.dmp.14.nc  BOUT.dmp.15.nc  BOUT.dmp.16.nc  BOUT.dmp.17.nc  BOUT.dmp.18.nc  BOUT.dmp.19.nc  BOUT.dmp.2.nc  BOUT.dmp.20.nc  BOUT.dmp.21.nc  BOUT.dmp.22.nc  BOUT.dmp.23.nc  BOUT.dmp.24.nc  BOUT.dmp.25.nc  BOUT.dmp.26.nc  BOUT.dmp.27.nc  BOUT.dmp.28.nc  BOUT.dmp.29.nc  BOUT.dmp.3.nc  BOUT.dmp.30.nc  BOUT.dmp.31.nc  BOUT.dmp.4.nc  BOUT.dmp.5.nc  BOUT.dmp.6.nc  BOUT.dmp.7.nc  BOUT.dmp.8.nc  BOUT.dmp.9.nc
xbout/tests/data/dump_files/single/: equilibrium.nc
xbout/tests/data/options/: BOUT.inp
xbout/tests/data/restart/: BOUT.restart.0.nc  BOUT.restart.1.nc  README.md
xbout/tests/inputs/: s-alpha.inp
xcollect/: __init__.py  boutdataset.py  collect.py  combine_nd.py  loadbout.py
xcollect/tests/: test_boutdataset.py  test_collect.py  test_combine_nd.py  test_loadbout.py
