[metadata]
name = xbout
url = https://github.com/boutproject/xBOUT
author = Thomas Nicholas
author_email = thomas.nicholas@york.ac.uk
description = Collect data from BOUT++ runs in python using xarray
license = Apache
python_requires = >=3.8
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Intended Audience :: Education
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Visualization

[options]
setup_requires =
    setuptools>=42
    setuptools_scm[toml]>=3.4
    setuptools_scm_git_archive
install_requires =
    xarray>=0.18.0,!=2022.9.0,!=2022.10.0,!=2022.11.0,!=2022.12.0
    boutdata>=0.1.4
    dask[array]>=2.10.0
    gelidum>=0.5.3
    natsort>=5.5.0
    matplotlib>=3.1.1,!=3.3.0,!=3.3.1,!=3.3.2
    animatplot>=0.4.2
    netcdf4>=1.4.0
    Pillow>=6.1.0
    importlib-metadata; python_version < "3.8"
include_package_data = True
packages = find:

[options.extras_require]
calc =
    numpy >= 1.13.0
    scipy >= 1.3.0
    dask >= 2.2.0
    statsmodels >= 0.10.1
    xrft
    xhistogram
docs = sphinx >= 1.4
3d_plot =
    k3d >= 2.8.0
    mayavi >= 4.7.2
    wand

[build_sphinx]
project = $metadata.name
version = $metadata.version
release = $metadata.version
source-dir = docs
